Fix mobile dropdown menu being clipped
Remove overflow:hidden from .christmas-border-top as it was
preventing the navigation dropdown menu from displaying on
mobile/portrait view.

--- a/_sass/_christmas.scss
+++ b/_sass/_christmas.scss
@@ -14,7 +14,7 @@ html {
 /* Candy Cane Border - Top (for masthead) */
 .christmas-border-top {
     border-bottom: none !important;
-    overflow: hidden;
+    /* Note: Do NOT use overflow: hidden here - it clips the mobile dropdown menu */
 }
 
 .christmas-border-top::after {
